--- a/GrpcClient/app/build.gradle
+++ b/GrpcClient/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'io.grpc:grpc-okhttp:1.44.1'
     implementation 'io.grpc:grpc-binder:1.44.1'
     implementation 'io.grpc:grpc-protobuf-lite:1.44.1'
