--- a/GrpcServer/app/build.gradle
+++ b/GrpcServer/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'io.grpc:grpc-okhttp:1.44.1'
     implementation 'io.grpc:grpc-binder:1.44.1'
     implementation 'io.grpc:grpc-protobuf-lite:1.44.1'
